fix popup menu z-index problem

--- a/components/menu/style/index.less
+++ b/components/menu/style/index.less
@@ -81,6 +81,10 @@
     color: @primary-color;
   }
 
+  &:not(&-inline) &-submenu-open {
+    z-index: @zindex-dropdown;
+  }
+
   &-horizontal &-item,
   &-horizontal &-submenu {
     margin-top: -1px;
